-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: None
-
Component/s: hotspot
-
b52
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082893 | emb-9 | David Holmes | P4 | Resolved | Fixed | team |
| JDK-8271548 | 8u321 | David Holmes | P4 | Resolved | Fixed | b01 |
| JDK-8271831 | 8u311 | David Holmes | P2 | Closed | Fixed | b05 |
When a synchronous error signal happens during error reporting (when writing the hs-err file), VM may die or hang. Secondary signal handling (which would take care of cancelling the step and continuing error reporting with the next step) does not always work correctly. This results in empty or half-empty hs-err files.
- backported by
-
JDK-8082893 Synchronous signals during error reporting may terminate or hang VM process
-
- Resolved
-
-
JDK-8271548 Synchronous signals during error reporting may terminate or hang VM process
-
- Resolved
-
-
JDK-8271831 Synchronous signals during error reporting may terminate or hang VM process
-
- Closed
-
- relates to
-
JDK-8072575 Add missing test for 8065895
-
- Resolved
-
-
JDK-8252533 Signal handlers should run with synchronous error signals unblocked
-
- Resolved
-
- links to
-
Review
openjdk/jdk8u-dev/39
(1 links to)