8065895: Synchronous signals during error reporting may terminate or hang VM process

Reviewed-by: dholmes, gziemski